--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </li>
 
       <li>
-        <a href="https://prt-sv.ccad.miyazaki-u.ac.jp/">宮崎大学どこプリ（学内wi-fiのみ）</a>
+        <a href="https://prt-sv.ccad.miyazaki-u.ac.jp/">宮崎大学どこプリ（学内のみ）</a>
       </li>
     </ul>
     
