--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="top-wrapper">
       <div class="main">
         <h1>宮崎大学必需ＨＰ</h1>
-      <h2>リンククリックでそこに行くよ！</h2>
+        <h2>リンククリックでそこに行くよ！</h2>
   </div>
 
   <div class="link_list">
@@ -35,10 +35,12 @@
       </li>
 
       <li>
-        <a href="https://prt-sv.ccad.miyazaki-u.ac.jp/">宮崎大学どこプリ（学内のみ）</a>
+        <a href="https://prt-sv.ccad.miyazaki-u.ac.jp/">宮崎大学どこプリ（学内wi-fiのみ）</a>
       </li>
     </ul>
-    
+
+
+
       </div>
 
     </div>
