--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <body>
     <div class="top-wrapper">
       <div class="main">
-        <h1>宮崎大学必需ＨＰ</h1>
-        <h2>リンククリックでそこに行くよ！</h2>
-  </div>
+          <h1>宮崎大学必需ＨＰ</h1>
+          <h2>リンククリックでそこに行くよ！</h2>
+      </div>
 
   <div class="link_list">
     <ul>
@@ -37,14 +37,29 @@
       <li>
         <a href="https://prt-sv.ccad.miyazaki-u.ac.jp/">宮崎大学どこプリ（学内wi-fiのみ）</a>
       </li>
+
+      <li>
+        <a href="https://mdl.cc.miyazaki-u.ac.jp/login/index.php">宮崎大学moodle</a>
+      </li>
+
+      <li>
+        <a href="https://fshare.ccad.miyazaki-u.ac.jp/">宮崎大学オンラインストレージ（学内wi-fiのみ</a>
+      </li>
     </ul>
-
-
-
       </div>
 
     </div>
 
+<div class="footer">
+  <div class="footer-list">
+    <ul>
+      <li>2020/7/21</li>
+      <li>ver1.03</li>
+    </ul>
+
+  </div>
+
+</div>
 
   </body>
 </html>
