--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </li>
 
       <li>
-        <a href="https://fshare.ccad.miyazaki-u.ac.jp/">宮崎大学オンラインストレージ（学内wi-fiのみ</a>
+        <a href="https://fshare.ccad.miyazaki-u.ac.jp/">宮崎大学オンラインストレージ（学内wi-fiのみ）</a>
       </li>
     </ul>
       </div>
