--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="shortcut icon" href="cube1.jpg">
     <link rel="apple-touch-icon" href="cube1.jpg" sizes="725*725">
+
+    <meta name="viewport"
+   content="width=320,
+      height=480,
+      initial-scale=1.0,
+      minimum-scale=1.0,
+      maximum-scale=2.0,
+      user-scalable=yes" />
+
   </head>
 
   <body>
@@ -43,7 +52,7 @@
       </li>
 
       <li>
-        <a href="https://fshare.ccad.miyazaki-u.ac.jp/">宮崎大学オンラインストレージ（学内wi-fiのみ）</a>
+        <a href="https://fshare.ccad.miyazaki-u.ac.jp/">宮崎大学オンラインストレージ（学内wi-fiのみ)</a>
       </li>
     </ul>
       </div>
