--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <link rel="apple-touch-icon" href="cube1.jpg" sizes="725*725">
 
     <meta name="viewport"
-   content="width=320,
+   content="width=380,
       height=480,
       initial-scale=1.0,
       minimum-scale=1.0,
       maximum-scale=2.0,
-      user-scalable=yes" />
+      user-scalable=yes" >
 
   </head>
 
