--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>宮大まとめサイト</title>
-    <link rel="stylesheet" href="stylesheet.css">
+    /*<link rel="stylesheet" href="stylesheet.css">*/
     <link rel="shortcut icon" href="cube1.jpg">
     <link rel="apple-touch-icon" href="cube1.jpg" sizes="725*725">
 
