--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8">
-    <title>宮大まとめサイト</title>
+    <title>宮崎大学まとめ</title>
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="shortcut icon" href="cube1.jpg">
     <link rel="apple-touch-icon" href="cube1.jpg" sizes="725*725">
@@ -21,7 +21,7 @@
   <body>
     <div class="top-wrapper">
       <div class="main">
-          <h1>宮崎大学必需ＨＰ</h1>
+          <h1>宮崎大学まとめURL</h1>
           <h2>リンククリックでそこに行くよ！</h2>
       </div>
 
@@ -62,8 +62,8 @@
 <div class="footer">
   <div class="footer-list">
     <ul>
-      <li>2020/7/21</li>
-      <li>ver1.03</li>
+      <li>2021/2/14</li>
+      <li>ver1.04</li>
     </ul>
 
   </div>
